--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Card Design</title>
 </head>
+
 <body>
+    <div class="container">
+
+        <a href="https://www.mythrillfiction.com/the-dark-rider" alt="Mythrill" target="_blank">
+
+            <div class="card">
+                <div class="wrapper">
+                    <img src="Assets/marvel-winter-soldier-red-wallpaper.jpg" alt="Winter Soldier - Cover"
+                        class="cover-image" />
+                </div>
+                <img src="Assets/NicePng_sebastian-stan-png_1342876.png" class="title" />
+                <img class="character" src="Assets/kindpng.png" alt="Winter Soldier - Marvel Battle Lines Cards">
+            </div>
+        </a>
+    </div>
 
     <!-- ##### SCRIPT ##### -->
     <script src=""></script>
 </body>
+
 </html>
