--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
             <div class="card">
                 <div class="wrapper">
-                    <img src="Assets/marvel-winter-soldier-red-wallpaper.jpg" alt="Winter Soldier - Cover"
+                    <img src="Assets/jumanji-cover.jpg" alt="JUMANJI - Cover"
                         class="cover-image" />
                 </div>
-                <img src="Assets/NicePng_sebastian-stan-png_1342876.png" class="title" />
-                <img class="character" src="Assets/kindpng.png" alt="Winter Soldier - Marvel Battle Lines Cards">
+                <img src="Assets/jumanji-logo.png" class="title" />
+                <img class="character" src="Assets/jumanji-char.png" alt="JUMANJI Characters">
             </div>
         </a>
     </div>
